1.2 - Age of Mayhem - 26w31a
**IMPROVEMENTS**
- added `Mob Kebab` advancement
- reworked biome placement
- creaking now emit game events when activating/deactivating/moving/freezing
- creaking hearts now have better handling of explosions
- reworked creaking heart resin spread
- reworked emissive block/item models
- reworked moss carpet shapers and occlusion
- reworked music fading in pale garden
- reworked pale oak tree decorators
- cleaned up code from the garden awakens

**BUGFIXES**
- debugging logs were left on the SpearUseGoal
- zombie horses wouldn't keep their armor when relogging