@@ -6,7 +6,6 @@ import com.blackgear.vanillabackport.common.worldgen.placements.TheGardenAwakens
 import com.blackgear.vanillabackport.common.level.worldgen.tree_decorators.CreakingHeartDecorator;
 import com.blackgear.vanillabackport.common.level.worldgen.tree_decorators.PaleMossDecorator;
 import com.blackgear.vanillabackport.core.VanillaBackport;
-import com.google.common.collect.ImmutableList;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.resources.ResourceKey;
@@ -35,8 +34,7 @@ public class TheGardenAwakensFeatures {
     
     // TREE FEATURES
     
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_OAK = REGISTRIES.register("pale_oak",
-        Feature.TREE,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_OAK = REGISTRIES.register("pale_oak", Feature.TREE,
         (features, placements) ->
             new TreeConfiguration.TreeConfigurationBuilder(
                 BlockStateProvider.simple(ModBlocks.PALE_OAK_LOG.get()),
@@ -45,11 +43,10 @@ public class TheGardenAwakensFeatures {
                 new DarkOakFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0)),
                 new ThreeLayersFeatureSize(1, 1, 0, 1, 2, OptionalInt.empty())
             )
-            .decorators(ImmutableList.of(new PaleMossDecorator(0.15F, 0.4F, 0.8F)))
+            .decorators(List.of(new PaleMossDecorator(0.15F, 0.4F, 0.8F)))
             .ignoreVines()
             .build());
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_OAK_BONEMEAL = REGISTRIES.register("pale_oak_bonemeal",
-        Feature.TREE,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_OAK_BONEMEAL = REGISTRIES.register("pale_oak_bonemeal", Feature.TREE,
         (features, placements) ->
             new TreeConfiguration.TreeConfigurationBuilder(
                 BlockStateProvider.simple(ModBlocks.PALE_OAK_LOG.get()),
@@ -60,8 +57,7 @@ public class TheGardenAwakensFeatures {
             )
             .ignoreVines()
             .build());
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_OAK_CREAKING = REGISTRIES.register("pale_oak_creaking",
-        Feature.TREE,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_OAK_CREAKING = REGISTRIES.register("pale_oak_creaking", Feature.TREE,
         (features, placements) ->
             new TreeConfiguration.TreeConfigurationBuilder(
                 BlockStateProvider.simple(ModBlocks.PALE_OAK_LOG.get()),
@@ -70,19 +66,16 @@ public class TheGardenAwakensFeatures {
                 new DarkOakFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0)),
                 new ThreeLayersFeatureSize(1, 1, 0, 1, 2, OptionalInt.empty())
             )
-            .decorators(
-                ImmutableList.of(
-                    new PaleMossDecorator(0.15F, 0.4F, 0.8F),
-                    new CreakingHeartDecorator(1.0F)
-                )
-            )
+            .decorators(List.of(
+                new PaleMossDecorator(0.15F, 0.4F, 0.8F),
+                new CreakingHeartDecorator(1.0F)
+            ))
             .ignoreVines()
             .build());
     
     // VEGETATION FEATURES
     
-    public static final ResourceKey<ConfiguredFeature<?, ?>> FLOWER_PALE_GARDEN = REGISTRIES.register("flower_pale_garden",
-        Feature.FLOWER,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> FLOWER_PALE_GARDEN = REGISTRIES.register("flower_pale_garden", Feature.FLOWER,
         (features, placements) ->
             new RandomPatchConfiguration(
                 1,
@@ -93,15 +86,13 @@ public class TheGardenAwakensFeatures {
                     new SimpleBlockConfiguration(BlockStateProvider.simple(ModBlocks.CLOSED_EYEBLOSSOM.get()))
                 )
             ));
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_GARDEN_FLOWERS = REGISTRIES.register("pale_garden_flowers",
-        Feature.RANDOM_PATCH,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_GARDEN_FLOWERS = REGISTRIES.register("pale_garden_flowers", Feature.RANDOM_PATCH,
         (features, placements) ->
             FeatureUtils.simplePatchConfiguration(
                 Feature.SIMPLE_BLOCK,
                 new SimpleBlockConfiguration(BlockStateProvider.simple(ModBlocks.CLOSED_EYEBLOSSOM.get()))
             ));
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_GARDEN_VEGETATION = REGISTRIES.register("pale_garden_vegetation",
-        Feature.RANDOM_SELECTOR,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_GARDEN_VEGETATION = REGISTRIES.register("pale_garden_vegetation", Feature.RANDOM_SELECTOR,
         (features, placements) ->
             new RandomFeatureConfiguration(
                 List.of(
@@ -110,8 +101,7 @@ public class TheGardenAwakensFeatures {
                 ),
                 placements.getOrThrow(TheGardenAwakensPlacements.PALE_OAK_CHECKED)
             ));
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_MOSS_VEGETATION = REGISTRIES.register("pale_moss_vegetation",
-        Feature.SIMPLE_BLOCK,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_MOSS_VEGETATION = REGISTRIES.register("pale_moss_vegetation", Feature.SIMPLE_BLOCK,
         (features, placements) ->
             new SimpleBlockConfiguration(
                 new WeightedStateProvider(
@@ -121,8 +111,7 @@ public class TheGardenAwakensFeatures {
                         .add(Blocks.TALL_GRASS.defaultBlockState(), 10)
                 )
             ));
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_MOSS_PATCH = REGISTRIES.register("pale_moss_patch",
-        Feature.VEGETATION_PATCH,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_MOSS_PATCH = REGISTRIES.register("pale_moss_patch", Feature.VEGETATION_PATCH,
         (features, placements) ->
             new VegetationPatchConfiguration(
                 BlockTags.MOSS_REPLACEABLE,
@@ -136,8 +125,7 @@ public class TheGardenAwakensFeatures {
                 UniformInt.of(2, 4),
                 0.75F
             ));
-    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_MOSS_PATCH_BONEMEAL = REGISTRIES.register("pale_moss_patch_bonemeal",
-        Feature.VEGETATION_PATCH,
+    public static final ResourceKey<ConfiguredFeature<?, ?>> PALE_MOSS_PATCH_BONEMEAL = REGISTRIES.register("pale_moss_patch_bonemeal", Feature.VEGETATION_PATCH,
         (features, placements) ->
             new VegetationPatchConfiguration(
                 BlockTags.MOSS_REPLACEABLE,
